2015-October-04 Struan Robertson

    * CollisonOperator.cpp: Altered equilibrium fraction method to account for 
    redundant reactions properly. Added HSP2.xml test to MesmerQA to check this.

2015-September-09 Chris Morley

	* src/plugins/ThermodynamicTable.cpp, src/System.cpp: extend the
	  calcMethod-specific model parameters including writing defaults to XML.
    
	* examples/Butyl_H_to_Butane/Butyl_H_to_Butane.xml remove <modelParams>

	* src/Persistence.h, src/XMLPersist.cpp, src/XMLPersist.h: extra optional
	  parameter on XmlWriteElement() to write to before a specified element.
	  (Keeps schema-complient by writing modelParams in the right place.)

2015-September-03 Struan Robertson

    * ThermodynamicTable.cpp, QMRotor.cpp, ClassicalRotor.cpp, BeyerSwinhart.cpp: 
    Fixes for heat capacity methods.


	* src/Rdouble.cpp,src/Rdouble.h: ensure that a ZPE specified by a
	  derivedFrom attribute is updated at the end, after any fitting, etc.,
	  and the new value appears (with the correct units) in the Firefox output.
	  As requested by Mark Blitz.	   

	* src/System.cpp: correct bug which sometimes caused first of two control
	  blocks to be inactive.

2015-August-09 Chris Morley
    
	* ThermodynamicTable.cpp: Illustrate how a calcMethod can set its own
	modelParameters. Needs editing for proper values.
	 
2015-August-08 Struan Robertson

    * MesmerTools.h/.cpp, gDensityOfStates.cpp/.h and all DoS classes: Density
    of states classes altered so as to return the variance of the energy in order
    to calculate heat capacity.

2015-August-05 Struan Robertson

    * gDensityOfStates.cpp, HinderedRotorQM1D.cpp: Fix for enthalpy bug in
    the ThermodynamicTable method.

2015-August-01 Chris Morley

	* src/ConditionsManager.cpp: tidy up and correct parsing of
	  <PTPair>, etc.

	* src/calcmethod.h, src/System.cpp: Expand DoesOwnParsing() to allow
	calcMethods more choice in what they parse themselves.
